app/k8s/23-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: realworld
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
